# estros_rs

./: .gdbinit  .gitignore  Cargo.toml  README.md  aarch64-none-custom.json  bootloader_settings.json  exampleconfig.sh  flake.nix  justfile  limine.conf  linker.ld  maskfile.md  rust-toolchain.toml
.cargo/: config.toml
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: boot.S  boot.rs  main.rs  syncronisation.rs  uart.rs
kernel/src/drivers/: mod.rs  semihosting.rs
kernel/src/dtb/: header.rs  memory_reservation_block.rs  mod.rs  strings_block.rs
kernel/src/mem/: mod.rs  paging.rs
kernel/src/mem/alloc/: mod.rs
kernel/src/mem/mmu/: mod.rs
kernel/src/multiprocessor/: mod.rs
kernel/src/rng/: mod.rs
kernel/src/rng/implementations/: xorshift.rs
kernel/src/scheduler/: mod.rs  process.rs  threads.rs
kernel/src/scheduler/implementations/: mod.rs  qds.rs
kernel/src/syncronisation/: mod.rs  null_lock.rs  spin_lock.rs
kernel/src/vectors/: cpu_state.rs  mod.rs  vectors.S
kernel/src/vectors/handlers/: el1_sp0_sync.rs  mod.rs
lib/estrogen/: Cargo.toml
user/minimal/: Cargo.toml
user/minimal_init/: Cargo.toml  build.rs  linker.ld
user/minimal_init/src/: main.rs
