[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
aarch64-cpu = "11.2.0"
anyhow = { version = "1.0.101", default-features = false }
elf = { version = "0.8.0", default-features = false, features = ["alloc"] }
qemu-exit = { version = "3.0.2", optional = true }
tock-registers = "0.10.1"


[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
doctest = false
bench = false

[features]
default = ["qemu"]
semihosting = []
qemu = ["semihosting", "dep:qemu-exit"]
